--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             margin-top: 15px;
         }
     </style>
-    <link rel="icon" href="./favicon/pngegg.png" type="image/x-icon">
+    <link rel="icon" href="./favicon/favicon.png" type="image/x-icon">
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const select = document.getElementById('year-select');
